--- a/source/index.html
+++ b/source/index.html
@@ -58,14 +58,14 @@
               <li class="advantages__item  advantage">
                 <div class="advantage__reason advantage__reason--reason-accent">
                   <div class="advantage__wrapper advantage__wrapper--background-svg">
-                    <div class="advantage__text">
-                      <h3 class="advantage__title advantage__title--first-child-indent">
+                    <div class="advantage__text advantage__text--city-width advantage__text--city-indent">
+                      <h3 class="advantage__title advantage__title--city-width advantage__title--city-indent">
                         Настоящий <br> городок
                       </h3>
                       <p class="advantage__number">
                         №1
                       </p>
-                      <p class="advantage__description advantage__description--first-child-indent">
+                      <p class="advantage__description advantage__description--city-width advantage__description--city-indent">
                         Седона не аттракцион для туристов, там течет своя жизнь
                       </p>
                     </div>
@@ -130,14 +130,14 @@
               <li class="advantages__item advantage">
                 <div class="advantage__reason advantage__reason--reason-accent">
                   <div class="advantage__wrapper">
-                    <div class="advantage__text">
-                      <h3 class="advantage__title advantage__title--second-child-indent">
+                    <div class="advantage__text advantage__text--bridge-width advantage__text--bridge-indent">
+                      <h3 class="advantage__title advantage__title--bridge--width  advantage__title--bridge-indent">
                         Там есть мост дьявола
                       </h3>
                       <p class="advantage__number">
                         №2
                       </p>
-                      <p class="advantage__description advantage__description--second-child-indent">
+                      <p class="advantage__description advantage__description--bridge-width advantage__description--bridge-indent">
                         Да, по нему можно пройти! Если вы осмелитесь, конечно
                       </p>
                     </div>
@@ -148,43 +148,43 @@
                 </div>
               </li>
               <li class="advantages__item advantage">
-
-                  <h3 class="advantage__title">
+                <div class="advantage__text advantage__text--square-size advantage__text--square-indent">
+                  <h3 class="advantage__title advantage__title--square-width">
                     Небольшая площадь
                   </h3>
                   <p class="advantage__number">
                     №3
                   </p>
-                  <p class="advantage__description">
+                  <p class="advantage__description advantage__description--square-width">
                     ВСЕ интересные места находятся очень близко
                   </p>
-
+                </div>
               </li>
               <li class="advantages__item advantage">
-
-                  <h3 class="advantage__title">
+                <div class="advantage__text advantage__text--street-size advantage__text--street-indent">
+                  <h3 class="advantage__title advantage__title--street-width">
                     Красивая дорога
                   </h3>
                   <p class="advantage__number">
                     №4
                   </p>
-                  <p class="advantage__description">
+                  <p class="advantage__description advantage__description--street-width">
                     Ехать в Седону из Лас-Вегаса совсем не скучно!
                   </p>
-
+                </div>
               </li>
               <li class="advantages__item advantage">
-
-                  <h3 class="advantage__title">
+                <div class="advantage__text advantage__text--tourists-size advantage__text--tourists-indent">
+                  <h3 class="advantage__title advantage__title--tourists-width">
                     Мало туристов
                   </h3>
                   <p class="advantage__number">
                     №5
                   </p>
-                  <p class="advantage__description">
+                  <p class="advantage__description advantage__description--tourists-width">
                     Большинство едет в Гранд Каньон и толпится там
                   </p>
-
+                </div>
               </li>
             </ol>
           </div>
@@ -240,6 +240,6 @@
         </div>
       </footer>
     </div>
-  <script src="../source/js/main.js"></script>
+  <script src="../js/main.js"></script>
   </body>
 </html>
