--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="preload" href="fonts/ptsans.woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ptsansbold.woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="img/favicons/32.ico">
   <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml">
@@ -11,7 +14,6 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-
 <body class="page__body">
   <div class="page__wrapper">
     <header class="page-header">
@@ -67,7 +69,7 @@
                   <source media="(min-width: 768px)"
                     srcset="img/catalog/presentation/photo-1-tablet.jpg, img/catalog/presentation/photo-1-tablet@2x.jpg 2x">
                   <img class="post__img-wrapper"
-                    srcset="img/catalog/presentation/photo-1-mobile.jpg, img/catalog/presentation/photo-1-mobile@2x.jpg 2x"
+                    src="img/catalog/presentation/photo-1-mobile.jpg" srcset="img/catalog/presentation/photo-1-mobile@2x.jpg 2x"
                     alt="Дорога среди растительности Седоны и гор прячущих солнце на закате">
                 </picture>
               </figure>
@@ -93,7 +95,7 @@
                   <source media="(min-width: 768px)"
                     srcset="img/catalog/presentation/photo-2-tablet.jpg, img/catalog/presentation/photo-2-tablet@2x.jpg 2x">
                   <img class="post__img-wrapper"
-                    srcset="img/catalog/presentation/photo-2-mobile.jpg, img/catalog/presentation/photo-2-mobile@2x.jpg 2x"
+                    src="img/catalog/presentation/photo-2-mobile.jpg" srcset="img/catalog/presentation/photo-2-mobile@2x.jpg 2x"
                     alt="Необычайный кактус с распукающимися цветками на его верхушке">
                 </picture>
               </figure>
@@ -118,7 +120,7 @@
                     srcset="img/catalog/presentation/photo-3-desktop.jpg, img/catalog/presentation/photo-3-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/catalog/presentation/photo-3-tablet.jpg, img/catalog/presentation/photo-3-tablet@2x.jpg 2x">
-                  <img class="post__img-wrapper" src="img/catalog/presentation/photo-3-mobile.jpg 1x"
+                  <img class="post__img-wrapper" src="img/catalog/presentation/photo-3-mobile.jpg"
                     srcset="img/catalog/presentation/photo-3-mobile@2x.jpg 2x" alt="Дорога на склоне горы Седоны">
                 </picture>
               </figure>
@@ -143,8 +145,8 @@
                     srcset="img/catalog/presentation/photo-4-desktop.jpg, img/catalog/presentation/photo-4-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
                     srcset="img/catalog/presentation/photo-4-tablet.jpg, img/catalog/presentation/photo-4-tablet@2x.jpg 2x">
-                  <img class="post__img-wrapper"
-                    srcset="img/catalog/presentation/photo-4-mobile.jpg, img/catalog/presentation/photo-4-mobile@2x.jpg 2x"
+                  <img class="post__img-wrapper" loading="lazy"
+                    src="img/catalog/presentation/photo-4-mobile.jpg" srcset="img/catalog/presentation/photo-4-mobile@2x.jpg 2x"
                     alt="Дорога на склоне горы Седоны">
                 </picture>
               </figure>
@@ -176,8 +178,8 @@
               srcset="img/catalog/presentation-video/video-desktop.jpg, img/catalog/presentation-video/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)"
               srcset="img/catalog/presentation-video/video-tablet.jpg, img/catalog/presentation-video/video-tablet@2x.jpg 2x">
-            <img class="video__promo-video"
-              srcset="img/catalog/presentation-video/video-mobile.jpg, img/catalog/presentation-video/video-mobile@2x.jpg 2x"
+            <img class="video__promo-video" loading="lazy"
+              src="img/catalog/presentation-video/video-mobile.jpg" srcset="img/catalog/presentation-video/video-mobile@2x.jpg 2x"
               alt="Седона">
           </picture>
           <div class="video-presentation__media-player media-player"><button
