--- a/source/form.html
+++ b/source/form.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-  <link rel="preload" href="fonts/ptsans.woff" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/ptsans.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/ptsansbold.woff" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/ptsansbold.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptsans.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptsansbold.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="img/favicons/32.ico">
     <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml">
@@ -60,7 +60,7 @@
           <form class="comment-form__form form" action="https://echo.htmlacademy.ru/" method="POST">
             <fieldset class="form__group form__group--name">
               <div class="form__title--name-elements">
-                <legend class="form__title form__title--name">Представьтесь:</legend>
+                <h3 class="form__title form__title--name">Представьтесь:</h3>
               </div>
               <ul class="form__list">
                 <li class="form__item form__item--name-indent">
@@ -82,7 +82,7 @@
             </fieldset>
             <fieldset class="form__group form__group--contact">
               <div class="form__title--contact-elements">
-                <legend class="form__title form__title--contact-indent">Контактная информация:</legend>
+                <h3 class="form__title form__title--contact-indent">Контактная информация:</h3>
               </div>
               <ul class="form__list form__list--contact-input-direction">
                 <li class="form__item form__item--contact-input-direction">
@@ -121,7 +121,7 @@
               </ul>
             </fieldset>
             <fieldset class="form__group form__group--impression">
-              <legend class="form__title form__title--impression-indent">Ваше общее впечатление:</legend>
+              <h3 class="form__title form__title--impression-indent">Ваше общее впечатление:</h3>
               <ul class="form__list form__list--impression-indent">
                 <li class="form__item form__item--impression-indent"><label class="form__label" for="radio-positiv"><input
                       class="form__radio visually-hidden" id="radio-positiv" name="form__radio" type="radio"
@@ -137,25 +137,25 @@
             </fieldset>
             <fieldset class="form__group form__group--attraction">
               <div class="form__title--attraction-elements">
-                <legend class="form__title form__title--attraction-indent">Посещенные достопримечательности:</legend>
+                <h3 class="form__title form__title--attraction-indent">Посещенные достопримечательности:</h3>
               </div>
               <ul class="form__list form__list--attraction-indent">
-                <li class="form__item"><label class="form__label"><input class="form__checkbox visually-hidden"
+                <li class="form__item form__item--attraction-indent"><label class="form__label"><input class="form__checkbox visually-hidden"
                       type="checkbox" checked="checked"> <span class="form__mark"></span> <span class="form__name">Мост
                       Дьявола</span></label></li>
-                <li class="form__item"><label class="form__label"><input class="form__checkbox visually-hidden"
+                <li class="form__item form__item--attraction-indent"><label class="form__label"><input class="form__checkbox visually-hidden"
                       type="checkbox" checked="checked"> <span class="form__mark"></span> <span
                       class="form__name">Гора-Колокол</span></label></li>
-                <li class="form__item"><label class="form__label"><input class="form__checkbox visually-hidden"
+                <li class="form__item form__item--attraction-indent"><label class="form__label"><input class="form__checkbox visually-hidden"
                       type="checkbox" checked="checked"> <span class="form__mark"></span> <span
                       class="form__name">Слайд-парк</span></label></li>
-                <li class="form__item"><label class="form__label"><input class="form__checkbox visually-hidden"
+                <li class="form__item form__item--attraction-indent"><label class="form__label"><input class="form__checkbox visually-hidden"
                       type="checkbox"> <span class="form__mark"></span> <span class="form__name">Красные
                       скалы</span></label></li>
               </ul>
             </fieldset>
             <fieldset class="form__group form__group--emotions">
-              <legend class="form__title">Опишите свои эмоции:</legend>
+              <h3 class="form__title form__title--emotions-indent">Опишите свои эмоции:</h3>
               <div class="form__textarea-wrapper"><textarea class="form__textarea" name="text" cols="30" rows="10"
                   placeholder="Опишите подробно все свои восторги"></textarea></div><button class="form__button"
                 type="button">Отправить отзыв</button>
@@ -193,15 +193,14 @@
             </ul>
           </div>
           <div class="page-footer__copyright"><a class="page-footer__copyright-link" href="https://htmlacademy.ru">
-              <p class="page-footer__copyright-text">Разработано</p><svg xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true" focusable="false" width="27" height="35" fill="none">
-                <path
-                  d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"
-                  fill="#000" />
+              <p class="page-footer__copyright-text">Разработано</p>
+              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" width="27" height="35">
+                <path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
               </svg>
             </a></div>
         </div>
-      </footer><!-- при отправеке ошибочной формы добавляется класс modal--opened -->
+      </footer>
+      <!-- при отправеке ошибочной формы добавляется класс modal--opened -->
       <!-- при закрытии модального окна добавляется класс modal--closed -->
       <div class="modal modal--error--opened modal--closed">
         <h2 class="modal__title modal__title--error">Что-то пошло не так!</h2>
