--- a/source/form.html
+++ b/source/form.html
@@ -242,7 +242,8 @@
         <h2 class="modal__title modal__title--error">Что-то пошло не так!</h2>
         <p class="modal__description modal__description--error">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
         <button class="modal__button modal__button--error-indent" type="button">Oк</button>
-      </div><!-- при успешной отправку формы добавляется класс modal--opened -->
+      </div>
+      <!-- при успешной отправку формы добавляется класс modal--opened -->
       <!-- при закрытии модального окна добавляется класс modal--closed -->
       <div class="modal modal--successfull-opened modal--closed">
         <div class="container">
