--- a/source/index.html
+++ b/source/index.html
@@ -150,14 +150,14 @@
                 <p class="advantage__description advantage__description--square-width">Вce интересные места находятся очень близко</p>
               </div>
             </li>
-            <li class="advantages__item advantage">
+            <li class="advantages__item advantage advantage--line-decoration">
               <div class="advantage__text  advantage__text--street-indent">
                 <h3 class="advantage__title advantage__title--street-width">Красивая дорога</h3>
                 <p class="advantage__number">№4</p>
                 <p class="advantage__description advantage__description--street-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
-            <li class="advantages__item advantage">
+            <li class="advantages__item advantage advantage--line-decoration">
               <div class="advantage__text  advantage__text--tourists-indent">
                 <h3 class="advantage__title advantage__title--tourists-width">Мало туристов</h3>
                 <p class="advantage__number">№5</p>
