--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
     <div class="page__wrapper">
       <header class="page-header">
         <nav class="main-nav main-nav--closed">
-          <a class="main-nav__header-logo" href="#">
+          <a class="main-nav__header-logo" href="index.html">
             <picture>
               <source media="(min-width: 1200px)" srcset="img/index/header/logotype-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/index/header/logotype-tablet.svg">
