--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
   <body class="page__body">
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <a class="main-nav__header-logo" href="index.html">
             <picture>
               <source media="(min-width: 1200px)" srcset="img/index/header/logotype-desktop.svg">
@@ -101,7 +101,7 @@
                     <span class="form__text form__text--visible-desktop">телефон*:</span>
                   </label>
                   <div class="form__input-wrapper">
-                    <input class="form__input form__input--width form__input--spin" id="phone-number" type="number" placeholder="Введите телефон">
+                    <input class="form__input form__input--width form__input--spin" id="phone-number" type="tel" placeholder="Введите телефон">
                     <div class="form__icon-wrapper">
                       <div class="form__icon">
                         <svg class="form__contact-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none">
@@ -192,7 +192,7 @@
               <div class="form__textarea-wrapper">
                 <textarea class="form__textarea" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
               </div>
-              <button class="form__button" type="button">Отправить отзыв</button>
+              <button class="form__button" type="submit">Отправить отзыв</button>
               <p class="form__required">* — обязательные поля</p>
             </fieldset>
           </form>
@@ -227,7 +227,7 @@
             </ul>
           </div>
           <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="https://htmlacademy.ru">
+            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
               <p class="page-footer__copyright-text">Разработано</p>
               <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" width="27" height="35">
                 <path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
@@ -251,7 +251,7 @@
           <p class="modal__description modal__description--successfull">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте.</p>
         </div>
         <div class="modal__button-wrapper">
-          <button class="modal__button" type="button">Закрыть окно</button>
+          <button class="modal__button modal__button--successfull" type="button">Закрыть окно</button>
         </div>
       </div>
     </div>
